Revision history for Perl module RT::Client::REST

0.45
  Marco Pessotto
   - Fixed uploading preventing objects to be stringified (RT#88919)
   - Added option to get undecoded attachments (RT#90112)

0.44
  Damien Krotkine
   - Add URI in the prereqs
  Dave Lambley
   - Add support for parsing RT dates and returning a datetime object.
     (RT#73920 + RT#76658)
  Gregor Hermann (Debian Perl Group)
   - Doc improvement (RT#74191)
  Darren Duncan
     Doc improvement for timeout (RT #78133)
  richardgmcmahon@gmail.com
     Doc improvement for show method (RT #78439)
  Miquel Ruiz
     Fix for submitting non latin-1 strings to RT

0.43
  Miquel Ruiz <mruiz@cpan.org>
    - Added support for groups via new class RT::Client::REST::Group
      Tests and examples also added.
  Roman Plesll <RPLESSL@cpan.org>
    - Fix for ticket merges (RT #62405)
  Stuart Browne <stuart.browne@ausregistry.com.au>
    - Accept question mark in custom field names (RT #70631)
  T Pascal <t_pascal@zennet.com>
    - Patch for different link types (RT #68673)
  Jose Luis Martinez <jlmartinez@capside.com>
    - Skip timeout tests on Windows (RT #70225, RT #35770)
    - Fix 'priveleged' (renamed to 'privileged') method on RT::Client::REST::User
    - Add missing disabled, nickname, lang, contactinfo and signature methods to
      RT::Client::REST::User
    - Clean up the API for retrieving links. Patch from T.Pascal is missing some
      cases like links that are URLs. This feature is not documented as it's
      considered experimental.
    - Refactor login method to accept any type of field name (not just username
      and password)

0.42
  False release. See 0.43
  - support for groups via new class RT::Client::REST::Group
  - Fix for ticket merges
  - Accept question mark in custom field names

0.41
  Tomas Doran <bobtfish@bobtfish.net>
 - Make version number a string to avoid length of version number changing
   at 0.X0 releases (as this breaks distro packages)